facebook link and course duration updates

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a
                     target="_blank"
                     rel="noopener noreferrer"
-                    href="https://www.facebook.com/ScaleUpTechAcademy/"
+                    href="https://www.facebook.com/ScaleUpTechAcad/"
                     class="nav-link"
             >
                 <img src="assets/fb.svg" alt="Facebook">
@@ -134,7 +134,7 @@
 
                 </h1>
                 <p class="mt-3 text-white/70 text-lg md:text-xl">
-                    20 Weeks Program.  100 % Virtual  Class. Career Coach and Mentorship
+                    16 weeks Program.  100 % Virtual  Class. Career Coach and Mentorship
                 </p>
                 <p class="mt-3 text-white/70 text-lg md:text-xl">
                     You will master the technical aspects of data gathering and data governance.
@@ -166,7 +166,7 @@
             </h2>
             <div class="accordion-collapse">
                 <div class="accordion-body py-4">
-                    Our programs are currently 20 weeks long (approx 5 months).
+                    Our programs are currently 16 weeks long (approx 4 months).
                 </div>
             </div>
         </div>
@@ -385,7 +385,7 @@
                         <img src="./assets/yt.svg" alt="YT" />
                     </a>
                     <a
-                            href="https://www.facebook.com/ScaleUpTechAcademy/"
+                            href="https://www.facebook.com/ScaleUpTechAcad/"
                             target="_blank"
                             rel="noopener noreferrer"
                     >
