--- a/programs/business-intelligence-data-analysis-reporting/index.html
+++ b/programs/business-intelligence-data-analysis-reporting/index.html
@@ -48,7 +48,7 @@
         <a
                 target="_blank"
                 rel="noopener noreferrer"
-                href="https://www.facebook.com/ScaleUpTechAcademy/"
+                href="https://www.facebook.com/ScaleUpTechAcad/"
                 class="nav-link"
         >
             <img src="../../assets/fb.svg" alt="Facebook">
@@ -131,7 +131,7 @@
             <h1 class="text-white text-4xl md:text-6xl font-bold">Business Intelligence,
                 Data Analysis and Reporting</h1>
             <p class="mt-3 text-white/70 text-xl">
-                20 Weeks Program.  100 % Virtual  Class. Career Coach and Mentorship
+                16 weeks Program.  100 % Virtual  Class. Career Coach and Mentorship
             </p>
         </div>
     </div>
@@ -265,7 +265,7 @@
                     <img src="../../assets/yt.svg" alt="YT" />
                 </a>
                 <a
-                        href="https://www.facebook.com/ScaleUpTechAcademy/"
+                        href="https://www.facebook.com/ScaleUpTechAcad/"
                         target="_blank"
                         rel="noopener noreferrer"
                 >
