--- a/contact/index.html
+++ b/contact/index.html
@@ -48,7 +48,7 @@
         <a
                 target="_blank"
                 rel="noopener noreferrer"
-                href="https://www.facebook.com/ScaleUpTechAcademy/"
+                href="https://www.facebook.com/ScaleUpTechAcad/"
                 class="nav-link"
         >
             <img src="../assets/fb.svg" alt="Facebook">
@@ -142,7 +142,7 @@
                     <img src="../assets/yt.svg" alt="YT" />
                 </a>
                 <a
-                        href="https://www.facebook.com/ScaleUpTechAcademy/"
+                        href="https://www.facebook.com/ScaleUpTechAcad/"
                         target="_blank"
                         rel="noopener noreferrer"
                 >
@@ -251,7 +251,7 @@
                     <img src="../assets/yt.svg" alt="YT" />
                 </a>
                 <a
-                        href="https://www.facebook.com/ScaleUpTechAcademy/"
+                        href="https://www.facebook.com/ScaleUpTechAcad/"
                         target="_blank"
                         rel="noopener noreferrer"
                 >
